Demo-1 Commit-2 fix all div alignment

--- a/common/css/eMythMakers.scss
+++ b/common/css/eMythMakers.scss
@@ -397,14 +397,14 @@ main {
       }
     }
     .newsType2 {
-      height: 86px;
+      height: 90px;
       overflow: hidden;
       .heading {
         @include headingTypeB;
         @include maxLine(3);
       }
       .imgResize {
-        @include imgViewer(57%);
+        @include imgViewer(62%);
       }
     }
   }
